# ai-sprint-planner

./: .env.example  .gitignore  README.md
.cursor/agents/: frontend-eng.md
.cursor/templates/: mr-template.md
backend/: .env.example  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/config/: agents.yaml  tasks.yaml
frontend/: package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/api/chat/: route.ts
frontend/app/api/health/: route.ts
frontend/app/sprint/: layout.tsx  page.tsx
frontend/components/: attachment.tsx  thread.tsx
frontend/components/chat/: ApprovalGate.tsx  EstimationDisplay.tsx  FeedbackControls.tsx  SprintPlanView.tsx  SprintPlanningThread.tsx  StoryCard.tsx
frontend/components/layout/: Header.tsx  Sidebar.tsx
frontend/components/planning/: BacklogPanel.tsx  PlanningDashboard.tsx  TeamConfig.tsx
frontend/lib/: mock-data.ts  store.ts
frontend/lib/types/: agent.ts  sprint.ts  story.ts
frontend/lib/utils/: streaming.ts
project-context/1.define/: mrd.md  prd.md  sad-mvp.md  sad.md
project-context/2.build/: frontend.md  setup.md
