[project]
name = "sprintpilot-backend"
version = "0.1.0"
description = "SprintPilot AI -- FastAPI + CrewAI backend for multi-agent sprint planning"
requires-python = ">=3.12"
readme = "README.md"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
